# codemafia

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: prod.yaml
app/: .gitignore  Cargo.toml  index.html  package.json
app/assets/: index.scss
app/src/: app.rs  config.rs  main.rs
app/src/components/: layoutitem.rs  mod.rs
app/src/pages/: landing.rs  mod.rs  room.rs
codemafia/: Cargo.toml
codemafia/src/: lib.rs  main.rs
codemafia/src/creator/: mod.rs
codemafia/src/events/: chat.rs  game.rs  mod.rs  player.rs  room.rs
codemafia/src/game/: board.rs  cache.rs  event.rs  mod.rs  server.rs  teams.rs  turn.rs  word.rs
codemafia/src/manager/: bridge.rs  dispatcher.rs  mod.rs  player.rs  room.rs
codemafia/src/manager/controllers/: mod.rs  util.rs
codemafia/src/manager/controllers/internal/: mod.rs  player.rs
codemafia/src/manager/controllers/shared/: mod.rs
codemafia/src/manager/dispatchers/: cache.rs  default.rs  info.rs  mod.rs
codemafia/src/messages/: chat.rs  game.rs  internal.rs  mod.rs  room.rs
codemafia/src/misc/: events.rs  internal.rs  mod.rs  player.rs
codemafia/src/player/: connection.rs  mod.rs  role.rs
codemafia/src/routes/: create.rs  game.rs  mod.rs
codemafia/src/routes/game/: game.rs  mod.rs  session.rs  util.rs
codemafia/src/server/: mod.rs
codemafia/src/wordbank/: creator.rs  mod.rs  supplier.rs
punt/: Cargo.toml
punt/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/elements/: mod.rs
shared/src/events/: chat.rs  game.rs  mod.rs  player.rs  room.rs
shared/src/messages/: chat.rs  game.rs  mod.rs  room.rs
shared/src/misc/: mod.rs  sequenced.rs
shared/src/player/: mod.rs  role.rs
trollnames/: Cargo.toml
trollnames/src/: main.rs
trollnames/src/manager/: mod.rs
trollnames/src/server/: event.rs  game_loop.rs
trollnames/src/wordbank/: creator.rs  mod.rs  supplier.rs
vercel/: build.sh  install.sh
