[package]
name = "codemafia-app"
version = "0.1.0"
edition = "2021"
description = "The CodeMafia frontend app."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
patternfly-yew = { version = "0.4.1", features = ["icons-fab", "tree"] }
chrono = { version = "0.4", features = ["wasmbind"] }
codemafia = { path = "../codemafia" }